--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -60,13 +60,14 @@
 <main>
     <header class="main-banner exercise-space-banner sticky-top">
         <div class="container d-flex justify-content-start">
+            <div class="main-banner__prompt"><a href="questions-dashboard.html">&lsaquo;</a></div>
             <figure class="main-banner__avatar align-self-center" aria-hidden="true">
                 <img src="sonobe-i.svg">
             </figure>
-            <h1 class="align-self-center">
+            <h1 class="align-self-center"><a href="questions-dashboard.html">
                 <span class="main-banner__subhead">LEVEL 1:</span>
                 <span class="main-banner__title">Novice</span>
-            </h1>
+            </a></h1>
             <div class="ms-auto align-self-center">
                 <button type="button" class="btn btn-light ll-button me-1"
                      data-bs-toggle="modal" data-bs-target="#lawSheetModal">
