--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -103,31 +103,37 @@
                 <!-- <div class="cardset-card__number">1</div> -->
                 <div class="cardset-card__title">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-initial.svg" title="Not started"></div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
                 <!-- <div class="cardset-card__number">9</div> -->
-                <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
+                <div class="cardset-card__title"><a href="exercise-space.html">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</a></div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg" title="In progress"></div>
+                <div class="cardset-card__prompt"><a href="exercise-space.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
                 <!-- <div class="cardset-card__number">10</div> -->
                 <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-complete.svg" title="Completed"></div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
                 <!-- <div class="cardset-card__number">1</div> -->
                 <div class="cardset-card__title">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-initial.svg" title="Not started"></div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
                 <!-- <div class="cardset-card__number">9</div> -->
                 <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg" title="In progress"></div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
                 <!-- <div class="cardset-card__number">10</div> -->
                 <div class="cardset-card__title">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
                 <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-complete.svg" title="Completed"></div>
+                <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
         </ol>
 
