--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -138,6 +138,35 @@
             </div>
         </div>
 
+        <div class="exercise-solution">
+            <div class="solution-step">
+                <p class="solution-step__prompt">Next,</p>
+                <form>
+                    <div class="solution-step__form row">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0">
+                            <label for="inputLaw" class="form-label">If I apply this law...</label>
+                            <select id="inputLaw" class="form-select">
+                                <option selected>Choose one</option>
+                                <option>...</option>
+                                <option>...</option>
+                            </select>
+                        </div>
+                        <div class="col-12 col-md-5 mb-4 mb-md-0">
+                            <label for="inputStatement" class="form-label">then I'll get this statement...</label>
+                            <input type="text" class="form-control" id="inputStatement" placeholder="Logic statement">
+                        </div>
+                        <div class="col-12 col-md-3 align-self-end text-center text-md-left">
+                            <button type="button" class="btn ll-button me-2">
+                                <span class="ll-button__text">Delete</span>
+                            </button>
+                            <button type="button" class="btn ll-button me-2">
+                                <span class="ll-button__text">Go!</span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
 
 <!-- 
