--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -38,7 +38,7 @@
             <span>Logic Learner</span>
             </a>
 
-            <ul class="nav col-6 top-bar__nav">
+            <ul class="nav col-auto top-bar__nav">
                 <li>
                   <a href="levels-dashboard.html" class="nav-link">
                     <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-home.svg">
@@ -188,7 +188,7 @@
   <div class="modal-dialog modal-dialog-scrollable modal-variable">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="lawSheetModalLabel">Laws of Propositional Logic</h4>
+        <h5 class="modal-title" id="lawSheetModalLabel">Laws of Propositional Logic</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
