--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -185,7 +185,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="lawSheetModal" tabindex="-1" aria-labelledby="lawSheetModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable">
+  <div class="modal-dialog modal-dialog-scrollable modal-dialog-variable">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="lawSheetModalLabel">Laws of Propositional Logic</h5>
