--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -194,68 +194,68 @@
       <div class="modal-body">
         <div class="row">
             <section class="col-12 col-md-6 law-definition">
-            De Morgan’s laws:<br />
+            <h5>De Morgan’s laws:</h5>
             ¬( p ∧ q ) ≡ ¬p ∨ ¬q<br />
-            ¬( p ∨ q ) ≡ ¬p ∧ ¬q<br />
+            ¬( p ∨ q ) ≡ ¬p ∧ ¬q
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Idempotent laws:<br />
+            <h5>Idempotent laws:</h5>
             p ∨ p ≡ p<br />
-            p ∧ p ≡ p<br />
+            p ∧ p ≡ p
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Associative laws:<br />
-            ( p ∨ q ) ∨ r ≡ p ∨ ( q ∨ r )<br />
+            <h5>Associativity laws:</h5>
             ( p ∧ q ) ∧ r ≡ p ∧ ( q ∧ r )<br />
+            ( p ∨ q ) ∨ r ≡ p ∨ ( q ∨ r )
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Commutative laws:<br />
-            p ∨ q ≡ q ∨ p<br />
+            <h5>Commutativity laws:</h5>
             p ∧ q ≡ q ∧ p<br />
+            p ∨ q ≡ q ∨ p
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Distributive laws:<br />
-            p ∨ ( q ∧ r ) ≡ ( p ∨ q ) ∧ ( p ∨ r )<br />
+            <h5>Distributive laws:</h5>
             p ∧ ( q ∨ r ) ≡ ( p ∧ q ) ∨ ( p ∧ r )<br />
+            p ∨ ( q ∧ r ) ≡ ( p ∨ q ) ∧ ( p ∨ r )<br />
+            p ∨ ( q ∨ r ) ≡ ( p ∨ q ) ∨ ( p ∨ r )<br />
+            p ∧ ( q ∧ r ) ≡ ( p ∧ q ) ∧ ( p ∧ r )
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Identity laws:<br />
-            p ∨ F ≡ p<br />
+            <h5>Identity laws:</h5>
             p ∧ T ≡ p<br />
+            p ∨ F ≡ p
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Domination laws:<br />
-            p ∧ F ≡ F<br />
+            <h5>Domination laws:</h5>
             p ∨ T ≡ T<br />
+            p ∧ F ≡ F
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Double negation law:<br />
-            ¬¬p ≡ p<br />
+            <h5>Double negation law:</h5>
+            ¬¬p ≡ p
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Complement laws:<br />
-            p ∧ ¬p ≡ F ¬T ≡ F<br />
-            p ∨ ¬p ≡ T ¬F ≡ T<br />
-            </section>
-
-            <section class="col-12 col-md-6 law-definition">
-            Absorption laws:<br />
+            <h5>Absorption laws:</h5>
             p ∨ (p ∧ q) ≡ p<br />
-            p ∧ (p ∨ q) ≡ p<br />
+            p ∧ (p ∨ q) ≡ p
             </section>
 
             <section class="col-12 col-md-6 law-definition">
-            Conditional identities:<br />
-            p → q ≡ ¬p ∨ q<br />
-            p ↔ q ≡ ( p → q ) ∧ ( q → p )<br />
+            <h5>Implication to disjunction law:</h5>
+            p → q ≡ ¬p ∨ q
+            </section>
+
+            <section class="col-12 col-md-6 law-definition">
+            <h5>IFF to implication law:</h5>
+            p ↔ q ≡ ( p → q ) ∧ ( q → p )
             </section>
         </div>
       </div>
