--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -288,12 +288,12 @@
 
     <button type="button" class="cat-button btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
-    <span class="ll-button__text d-inline-block d-sm-none">X-Small, tiny cat, <576px </span>
-    <span class="ll-button__text d-none d-sm-inline-block d-md-none">Small, sm cat, ≥576px </span>
-    <span class="ll-button__text d-none d-md-inline-block d-lg-none">Medium, md cat, ≥768px </span>
-    <span class="ll-button__text d-none d-lg-inline-block d-xl-none">Large, lg cat, ≥992px </span>
-    <span class="ll-button__text d-none d-xl-inline-block d-xxl-none">Extra large, xl chonky, ≥1200px </span>
-    <span class="ll-button__text d-none d-xxl-inline-block">Extra extra large, xxl cat, ≥1400px </span>
+    <span class="ll-button__text d-inline-block d-sm-none">XS, kitten cat, <576px </span>
+    <span class="ll-button__text d-none d-sm-inline-block d-md-none">SM, small cat, ≥576px </span>
+    <span class="ll-button__text d-none d-md-inline-block d-lg-none">MD, medium cat, ≥768px </span>
+    <span class="ll-button__text d-none d-lg-inline-block d-xl-none">LG, chonky cat, ≥992px </span>
+    <span class="ll-button__text d-none d-xl-inline-block d-xxl-none">XL, hefty chonky cat, ≥1200px </span>
+    <span class="ll-button__text d-none d-xxl-inline-block">XXL, mega chonker cat, ≥1400px </span>
     </button>
 
     </section>
