--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="question.css">
     <link rel="stylesheet" href="solution.css">
     <link rel="stylesheet" href="button.css">
+    <link rel="stylesheet" href="flames.css">
     <link rel="stylesheet" href="footer.css">
     <title>Exercise Space - Logic Learner</title>
 </head>
@@ -308,7 +309,22 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+<div style="position: relative; border-bottom: 1rem solid #ccc; height: 200px; width: 300px; overflow: hidden">
+<div class="home">
+<img src="home-icon.svg" />
+</div>
+<div class="flame1">
+<img class="rotating" src="flames.png" />
+</div>
+<div class="flame2">
+<img class="rotating2" src="flames.png" />
+</div>
+<div class="flame3">
+<img class="rotating3" src="flames.png" />
+</div>
         <div class="cat"><img src="cat.svg" /></div>
+</div>
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
