--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -71,8 +71,8 @@
                 <span class="main-banner__subhead">LEVEL 1:</span>
                 <span class="main-banner__title">Novice</span>
             </a></h1>
-            <div class="ms-auto align-self-center">
-                <button type="button" class="btn btn-light ll-button me-1"
+            <div class="ms-auto align-self-center text-end">
+                <button type="button" class="btn btn-light ll-button me-0 me-md-1 mb-2 mb-md-0"
                      data-bs-toggle="modal" data-bs-target="#lawSheetModal">
                     <span class='ll-icons ll-button__icon'><img src="icon-clipboard.svg" /></span>
                     <span class="ll-button__text">Law sheet</span>
