--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -72,12 +72,12 @@
                 <span class="main-banner__title">Novice</span>
             </a></h1>
             <div class="ms-auto align-self-center text-end">
-                <button type="button" class="btn btn-light ll-button me-0 me-md-1 mb-2 mb-md-0"
+                <button type="button" class="btn btn-light ll-button me-0 me-md-1 mb-2 mb-md-0 btn-shrink"
                      data-bs-toggle="modal" data-bs-target="#lawSheetModal">
                     <span class='ll-icons ll-button__icon'><img src="icon-clipboard.svg" /></span>
                     <span class="ll-button__text">Law sheet</span>
                 </button>
-                <button type="button" class="btn btn-light ll-button"
+                <button type="button" class="btn btn-light ll-button btn-shrink"
                      data-bs-toggle="modal" data-bs-target="#keyBindingModal">
                     <span class='ll-icons ll-button__icon'><img src="icon-keyboard.svg" /></span>
                     <span class="ll-button__text">Logic symbols</span>
