--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -69,7 +69,7 @@
             </figure>
             <h1 class="align-self-center"><a href="questions-dashboard.html">
                 <span class="main-banner__subhead">LEVEL 1:</span>
-                <span class="main-banner__title">Novice</span>
+                <span class="main-banner__title">Apprentice</span>
             </a></h1>
             <div class="ms-auto align-self-center text-end">
                 <button type="button" class="btn btn-light ll-button me-0 me-md-1 mb-2 mb-md-0 btn-shrink"
