--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -127,37 +127,10 @@
             </li>
         </ol>
 
-
-
-
-<!-- 
-        <ol class="cardset-cards" aria-labelledby="cardset-label">
-            <li>
-                <div class="cardset-number">1</div>
-                <div class="question-text">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
-                <div class="question-state ms-auto"><img src="icon-q-inprogress.svg"></div>
-            </li>
-            <li>
-                <div class="cardset-number">2</div>
-                <div class="question-text d-block">Prove that <span class="question-statement">q→(p→q)</span> is a <span class="question-statement">tautology</span>.</div>
-                <div class="question-state ms-auto" aria-label="Proof status: completed"><img src="icon-q-completed.svg"></div>
-            </li>
-            <li>
-                <div class="cardset-number">3</div>
-                <div class="question-text d-block">Prove that <span class="question-statement">¬(p∧q)∧(p∨¬q)</span> is logically equivalent to <span class="question-statement">¬q</span>.</div>
-                <div class="question-state ms-auto" aria-label="Proof status: have not started"><img src="icon-q-todo.svg"></div>
-            </li>
-            <li>
-                <div class="cardset-number">4</div>
-                <div class="question-text d-block">Prove that <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
-                <div class="question-state ms-auto" aria-label="Proof status: have not started"><img src="icon-q-todo.svg"></div>
-            </li>
-        </ol>
- -->
     <button type="button" class="cat-button btn btn-light ll-button">
     <span class='ll-icons ll-button__icon'><img src="cat.svg" /></span>
     <span class="ll-button__text d-inline-block d-sm-none">XS, kitten cat, <576px </span>
-    <span class="ll-button__text d-none d-sm-inline-block d-md-none">SM, small cat, ≥576px </span>
+    <span class="ll-button__text d-none d-sm-inline-block d-md-none">SM, smol cat, ≥576px </span>
     <span class="ll-button__text d-none d-md-inline-block d-lg-none">MD, medium cat, ≥768px </span>
     <span class="ll-button__text d-none d-lg-inline-block d-xl-none">LG, chonky cat, ≥992px </span>
     <span class="ll-button__text d-none d-xl-inline-block d-xxl-none">XL, hefty chonky cat, ≥1200px </span>
