--- a/ll-bootstrap/exercise-space.html
+++ b/ll-bootstrap/exercise-space.html
@@ -300,7 +300,7 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!-- Cat Modal -->
 <div class="modal fade" id="catModal" tabindex="-1" aria-labelledby="catModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content" style="height:500px;">
@@ -351,9 +351,19 @@
 
 </main>
 
-<footer class="bg-light">
+<footer>
     <div class="container">
-        Footer
+     <ul class="nav navlist--footer">
+        <li class="nav-item">
+            <a href="/about/">About Logic Learner</a>
+        </li>
+        <li class="nav-item">
+            <a href="/contact/" title="Contact us">Contact Us</a>
+        </li>
+    </ul>
+    <p class="ll-license text-center mt-3 fs-6">Logic Learner open-source code is on <a itemprop="license" rel="license noopener noreferrer" href="https://github.com/ccnmtl/logiclearner">Github</a> with <a itemprop="license" rel="license noopener noreferrer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a> license.</p>
+    <div itemscope itemtype="http://schema.org/EducationalOrganization" class='text-center'><a href="http://ctl.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url" class='d-inline-block'><img src="logo-ctl.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Center for Teaching and Learning at Columbia University</span></a></div>
+
     </div>
 </footer>
 
