--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -99,6 +99,16 @@
 
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
+                <figure class="cardset-card__avatar"><img src="tutorial.svg"></figure>
+                <div class="d-flex flex-column align-self-center me-2 me-lg-0">
+                    <div class="cardset-card__subhead">Tutorial</div>
+                    <div class="cardset-card__title level-name"><a href="tutorial.html">Using Logic Learner</a></div>
+                    <div class="cardset-card__text">Learn how to use the tool</div>
+                </div>
+                <div class="cardset-card__status-count" aria-label="Questions completed"><a href="questions-dashboard.html">9/10</a></div>
+                <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
+            </li>
+            <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="sonobe-i.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level I</div>
