--- a/ll-bootstrap/tutorial.html
+++ b/ll-bootstrap/tutorial.html
@@ -87,63 +87,58 @@
         </div>
     </header>
 
-    <!-- Grid -->
-<!-- 
-    <div class="container">
-<div class="row mx-0">
-    <div class="col-1 border border-primary border-end-0">grid 1</div>
-    <div class="col-1 border border-primary border-end-0">grid 2</div>
-    <div class="col-1 border border-primary border-end-0">grid 3</div>
-    <div class="col-1 border border-primary border-end-0">grid 4</div>
-    <div class="col-1 border border-primary border-end-0">grid 5</div>
-    <div class="col-1 border border-primary border-end-0">grid 6</div>
-    <div class="col-1 border border-primary border-end-0">grid 7</div>
-    <div class="col-1 border border-primary border-end-0">grid 8</div>
-    <div class="col-1 border border-primary border-end-0">grid 9</div>
-    <div class="col-1 border border-primary border-end-0">grid 10</div>
-    <div class="col-1 border border-primary border-end-0">grid 11</div>
-    <div class="col-1 border border-primary">grid 12</div>
+
+
+    <section class="container content-body exercise-space tutorial-section">
+    
+    <p>
+    Welcome to Logic Learner. <a href="#testing123">Before you begin</a> using this tool to learn propositional logic, here's a tour. In hac habitasse platea dictumst. Duis ac mi rhoncus, mattis ante nec, posuere augue. Suspendisse potenti. Donec leo massa, dictum ac rutrum aliquam, fringilla et urna.
+    </p>
+    <p>Suspendisse consectetur justo et rhoncus tristique. Cras bibendum eros a suscipit ullamcorper. Nullam vitae neque quis dolor dapibus sollicitudin vitae sed elit. Vestibulum at.
+    </p>
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="modal">Law sheet and logic symbols</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="question">Logic proof question</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="solution">Solution steps</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="submission">Go, or delete</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="hint">Hints</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="solutionkey">Solution key</button>
+
+
+<button class="tutorial-prompt btn btn-secondary" data-segment="reset">Reset proof</button>
+
+<div class="guide__box guide-text" id="guide-modal">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Law sheet</h2>
+    <p>Aliquam vel nisl sed leo cursus iaculis efficitur sed lectus. In vel felis vitae nisi feugiat euismod ut vel enim. Suspendisse accumsan a neque nec pharetra. Suspendisse massa est, rhoncus.</p>
+    <h2>Logic symbols</h2>
+    <p>Aliquam vel nisl sed leo cursus iaculis efficitur sed lectus. In vel felis vitae nisi feugiat euismod ut vel enim. Suspendisse accumsan a neque nec pharetra. Suspendisse massa est, rhoncus.</p>
 </div>
-</div>
- -->
 
 
-    <section class="container content-body exercise-space">
-
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="modal">Law sheet and logic symbols</button>
 
 
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="question">Logic proof question</button>
 
 
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="solution">Solution steps</button>
-
-
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="submission">Go, or delete</button>
-
-
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="hint">Hints</button>
-
-
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="solutionkey">Solution key</button>
-
-
-<button class="btn btn-secondary" data-selector="#tutorial-container" data-segment="reset">Reset proof</button>
-
-
-<div class="guide-text" id="guide-modal">Law sheet and logic symbols explanation</div>
-<div class="guide-text" id="guide-question">Logic proof question explanation</div>
-<div class="guide-text" id="guide-solution">Solution steps explanation</div>
-<div class="guide-text" id="guide-submission">Go, or delete explanation</div>
-<div class="guide-text" id="guide-hint">Hints explanation</div>
-<div class="guide-text" id="guide-solutionkey">Solution key explanation</div>
-<div class="guide-text" id="guide-reset">Reset proof explanation</div>
-
-</section>
-
-        <section class="container content-body exercise-space border-top" id="maincontent">
+        <section class="container content-body exercise-space border-top tutorial-section" id="maincontent">
 
         <p class="question fs-2" id="helper-question">Prove that  <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</p>
+
+<div class="guide__box guide-text" id="guide-question">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Logic proof question</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
 
         <div class="exercise-solution">
             <div class="solution-step">
@@ -174,10 +169,20 @@
                         </div>
                     </div>
                 </form>
-            </div>
+ <div class="guide__box guide-text" id="guide-solution">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Solution step</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
+ <div class="guide__box guide-text" id="guide-submission">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Go, or Delete step</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
+           </div>
 
 
-            <div class="solution-actions">
+            <div class="solution-actions" id="testing123">
             <button type="button" class="btn btn-lg ll-button mx-3 my-2 my-md-0" id="helper-hint">
                 <span class="ll-button__text">I need a hint</span>
             </button>
@@ -187,7 +192,25 @@
             <button type="button" class="btn btn-lg ll-button mx-3 my-2 my-md-0" id="helper-reset">
                 <span class="ll-button__text">Reset proof</span>
             </button>
+
             </div>
+ <div class="guide__box guide-text" id="guide-hint">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Hints</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
+
+ <div class="guide__box guide-text" id="guide-solutionkey">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Solution key</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
+
+ <div class="guide__box guide-text" id="guide-reset">
+    <button class="tutorial-close btn btn-warning" aria-label="Close"></button>
+    <h2>Reset proof</h2>
+    <p>Mauris eleifend felis non semper blandit. Aliquam luctus sed neque sagittis eleifend. Morbi ultrices, metus et euismod malesuada, mi sem auctor felis, quis rutrum nulla eros et augue. Integer facilisis.</p>
+</div>
 
         </div>
 
@@ -196,18 +219,10 @@
 
 
 
-<!-- 
-        <ol class="cardset cardset-listnum">
-            <li class="cardset-card">
-                <div class="cardset-card__title">Prove that <span class="question-statement">¬(¬p)</span> is logically equivalent to <span class="question-statement">p</span>.</div>
-                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-initial.svg" title="Not started"></div>
-            </li>
-            <li class="cardset-card">
-                <div class="cardset-card__title">Prove that  <span class="question-statement">(p∨q)→r</span> is logically equivalent to <span class="question-statement">(p→r)∧(q→r)</span>.</div>
-                <div class="cardset-card__status" aria-label="Status: in progress"><img src="icon-status-inprogress.svg" title="In progress"></div>
-            </li>
-        </ol>
- -->
+
+
+
+
 
 <!-- Modal -->
 <div class="modal fade" id="lawSheetModal" tabindex="-1" aria-labelledby="lawSheetModalLabel" aria-hidden="true">
@@ -356,6 +371,7 @@
     </button>
 
     </section>
+</section>
 
 
 </div>
@@ -379,17 +395,25 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-    $('button').click(function() {
-       var selector = $(this).data('selector');
+    $('.tutorial-prompt').click(function() {
        var segment = $(this).data('segment');
        var segmentClass = "tutorial-" + segment;
        var segmentGuide = "#guide-" + segment;
-       $(selector).attr("class", segmentClass);
-       $(".guide-text").css("display", "none");
-       $(segmentGuide).css("display", "block");
+       var segmentLocation = "#helper-" + segment;
+       $('#tutorial-container').attr("class", segmentClass);
+       $(".guide__box").hide();
+       $(segmentGuide).show();
+        $('html, body').animate({
+            scrollTop: $(segmentLocation).offset().top - 100
+        },'fast');
+    });
+    $('.tutorial-close').click(function() {
+       $(".guide__box").hide();
+        $('html, body').animate({ scrollTop: "0" }, 'fast');
+       $('#tutorial-container').removeClass();
     });
 });</script>
 
