--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -99,7 +99,7 @@
 
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
-                <figure class="cardset-card__avatar"><img src="tutorial.svg"></figure>
+                <figure class="cardset-card__avatar bg-white"><img src="tutorial.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Tutorial</div>
                     <div class="cardset-card__title level-name"><a href="tutorial.html">Using Logic Learner</a></div>
