--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -68,7 +68,7 @@
             </figure>
             <h1 class="align-self-center">
                 <span class="main-banner__title banner-hero__title">Logic Learner</span>
-                <span class="main-banner__text banner-hero__text">Logic is the beginning of wisdom, not the end of it</span>
+                <span class="main-banner__text banner-hero__text">A practice tool for writing proofs in propositional logic</span>
             </h1>
         </div>
     </header>
