--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -41,14 +41,14 @@
 
             <ul class="nav col-auto top-bar__nav">
                 <li>
-                  <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-home.svg">
-                    Home
+                  <a href="tutorial.html" class="nav-link">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="icon-tutorial.svg">
+                    Tutorial
                   </a>
                 </li>
                 <li>
                   <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-grid.svg">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="icon-grid.svg">
                     Levels
                   </a>
                 </li>
@@ -109,7 +109,7 @@
                 <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
-                <figure class="cardset-card__avatar"><img src="sonobe-i.svg"></figure>
+                <figure class="cardset-card__avatar bg-white"><img src="avatar-level-1.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level I</div>
                     <div class="cardset-card__title level-name"><a href="questions-dashboard.html">Novice</a></div>
@@ -119,7 +119,7 @@
                 <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
-                <figure class="cardset-card__avatar"><img src="sonobe-ii.svg"></figure>
+                <figure class="cardset-card__avatar bg-white"><img src="avatar-level-2.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level II</div>
                     <div class="cardset-card__title level-name">Learner</div>
