--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -99,7 +99,7 @@
 
         <ol class="cardset cardset-levels" aria-labelledby="cardset-label">
             <li class="cardset-card">
-                <figure class="cardset-card__avatar bg-white"><img src="tutorial.svg"></figure>
+                <figure class="cardset-card__avatar"><img src="avatar-tutorial.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Tutorial</div>
                     <div class="cardset-card__title level-name"><a href="tutorial.html">Using Logic Learner</a></div>
@@ -109,7 +109,7 @@
                 <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
-                <figure class="cardset-card__avatar bg-white"><img src="avatar-level-1.svg"></figure>
+                <figure class="cardset-card__avatar"><img src="avatar-level-1.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level I</div>
                     <div class="cardset-card__title level-name"><a href="questions-dashboard.html">Novice</a></div>
@@ -119,7 +119,7 @@
                 <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
-                <figure class="cardset-card__avatar bg-white"><img src="avatar-level-2.svg"></figure>
+                <figure class="cardset-card__avatar"><img src="avatar-level-2.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level II</div>
                     <div class="cardset-card__title level-name">Learner</div>
@@ -129,7 +129,7 @@
                 <div class="cardset-card__prompt">&rsaquo;</div>
             </li>
             <li class="cardset-card">
-                <figure class="cardset-card__avatar"><img src="sonobe-iii.svg"></figure>
+                <figure class="cardset-card__avatar"><img src="avatar-level-3.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Level II</div>
                     <div class="cardset-card__title level-name">Apprentice</div>
