--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -105,8 +105,7 @@
                     <div class="cardset-card__title level-name"><a href="tutorial.html">Using Logic Learner</a></div>
                     <div class="cardset-card__text">Learn how to use the tool</div>
                 </div>
-                <div class="cardset-card__status-count" aria-label="Questions completed"><a href="questions-dashboard.html">9/10</a></div>
-                <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
+                <div class="cardset-card__prompt ms-auto"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="avatar-level-1.svg"></figure>
